fixed a bug where the contact form wouldn't display correctly on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,6 +239,7 @@ a > i {
     padding: 30px;
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 .form-section {
